--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,10 @@ yarn_mappings=1.19.2+build.28
 loader_version=0.14.17
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.1.1
 maven_group=net.lightglow
 archives_base_name=skeletalremains
 
 # Dependencies
 fabric_version=0.76.0+1.19.2
+omega_config_version=1.3.0+1.19.2
